--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,7 @@ body {
   font: 400 12px/1.8 "Open Sans", sans-serif;
   color: #666;
   -webkit-font-smoothing: antialiased;
+  overflow-x:hidden;
 
 }
 
@@ -1041,13 +1042,13 @@ General Styles - FlexSlider
 .flex-direction-nav .flex-prev {
   opacity: 0;
   left: 0;
-  cursor: url(../images/prev-light.png), e-resize;
+  /*cursor: url(../images/prev-light.png), e-resize;*/
 }
 
 .flex-direction-nav .flex-next {
   opacity: 0;
   right: 0;
-  cursor: url(../images/next-light.png), e-resize;
+  /*cursor: url(../images/next-light.png), e-resize;*/
 }
 
 .flex-control-nav {
@@ -1123,6 +1124,19 @@ Hero Slider
   -moz-background-size: cover;
   -o-background-size: center;
 }
+
+/*hero-slider .slides li {
+  background-size: center;
+  background-position: center center;
+  background-repeat: no-repeat;
+  height: 100% !important;
+  width: 100%;
+  padding: 0;
+  margin: 0;
+  -webkit-background-size: center;
+  -moz-background-size: cover;
+  -o-background-size: center;
+}*/
 
 /* Caption */
 .titan-caption {
